==> reweiser3/freETarget/Software/ESP32/tcp_server/main/json.c <==
#include "freETarget.h"
#include "json.h"
#include "ctype.h"
#include "stdio.h"
#define JSON_DEBUG false            // TRUE to echo DEBUG messages

void show_echo(void)
{
  unsigned int i, j;
  char   s[512], str_c[32];   // String holding buffers

  if ( (json_token == TOKEN_WIFI) || (my_ring == TOKEN_UNDEF) )
  {
    sprintf(s, "\r\n{\r\n\"NAME\":\"%s\", \r\n", names[json_name_id]);
  }
  else
  {
    sprintf(s, "\r\n{\r\n\"NAME\":\"%s\", \r\n", names[json_name_id+my_ring]);
  }
  output_to_all(s);

/*
 * Loop through all of the JSON tokens
 */
  i=0;
  while ( JSON[i].token != 0 )                 // Still more to go?  
  {
    if ( (JSON[i].value != NULL) || (JSON[i].d_value != NULL) )              // It has a value ?
    {
      switch ( JSON[i].convert )              // Display based on it's type
      {
        default:
        case IS_VOID:
          break;

        case IS_TEXT:
        case IS_SECRET:
            j = 0;
            while ( *((char*)(JSON[i].value)+j) != 0)
            {
              if ( JSON[i].convert == IS_SECRET )
              {
                str_c[j] = '*';
              }
              else
              {
                str_c[j] = *((char*)(JSON[i].value)+j);
              }
              j++;
            }
            str_c[j] = 0;
            sprintf(s, "%s \"%s\", \r\n", JSON[i].token, str_c);
            break;
            
        case IS_INT16:
        case IS_FIXED:
          sprintf(s, "%s %d, \r\n", JSON[i].token, *JSON[i].value);
          break;

        case IS_FLOAT:
        case IS_DOUBLE:
          dtostrf(*JSON[i].d_value, 8, 6, str_c );
          sprintf(s, "%s %s, \r\n", JSON[i].token, str_c);
          break;
      }
      output_to_all(s);
      if ( esp01_connected() )            // If the wifi is attached
      {
        delay(100);                        // Slow down to let it catch up
      }
    }
    i++;
  }
  
/*
 * Finish up with the special cases
 */
  sprintf(s, "\n\r");                                                                    // Blank Line
  output_to_all(s);
  
  multifunction_display();
  
  sprintf(s, "\"TRACE\": %d, \n\r", is_trace);                                             // TRUE to if trace is enabled
  output_to_all(s);

  sprintf(s, "\"RUNNING_MINUTES\": %ld, \n\r", millis()/1000/60);                       // On Time
  output_to_all(s);
  
  dtostrf(temperature_C(), 4, 2, str_c );
  sprintf(s, "\"TEMPERATURE\": %s, \n\r", str_c);                                         // Temperature in degrees C
  output_to_all(s);
  
  dtostrf(speed_of_sound(temperature_C(), json_rh), 4, 2, str_c );
  sprintf(s, "\"SPEED_SOUND\": %s, \n\r", str_c);                                         // Speed of Sound
  output_to_all(s);

  dtostrf(TO_VOLTS(analogRead(V_REFERENCE)), 4, 2, str_c );
  sprintf(s, "\"V_REF\": %s, \n\r", str_c);                                               // Trip point reference
  output_to_all(s);
  
  dtostrf(5.0d * (float)analogRead(V_12_LED) * K_12 / 1023.0d , 4, 2, str_c );            // Analog Reference * input * resistor divider / max MSB
  sprintf(s, "\"V_12_LED\": %s, \n\r", str_c);                                            // 12 Volt LED supply
  output_to_all(s);
  
  sprintf(s, "\"VSET_PWM\": %d, \n\r", json_vset_PWM);                                    // Setpoint adjust PWM
  output_to_all(s);
  
  sprintf(s, "\"TIMER_COUNT\": %d, \n\r", (int)(SHOT_TIME * OSCILLATOR_MHZ));             // Maximum number of clock cycles to record shot (target dependent)
  output_to_all(s);


  if ( json_token == TOKEN_WIFI )
  {
    sprintf(s, "\"WiFi_PRESENT\": %d, \n\r", esp01_is_present());                         // TRUE if WiFi is available
    output_to_all(s);
  
    if ( esp01_is_present() )
    {
      esp01_myIP(str_c);
      sprintf(s, "\"WiFi_IP_ADDRESS\": \"%s:1090\", \n\r", str_c);                        // Print out the IP address
      output_to_all(s);
  
      for ( i=0; i != esp01_N_CONNECT; i++)
      {
        sprintf(s, "\"WiFi_CONNECT %d\": %d, \n\r", i+1, esp01_connect[i]);               // TRUE if Client[i] connected
        output_to_all(s);
      }
    }
  }
  else
  {
    sprintf(s, "\"TOKEN_RING\":  %d, \n\r", my_ring);                                     // My token ring address
    output_to_all(s);
    sprintf(s, "\"TOKEN_OWNER\": %d, \n\r", whos_ring);                                  // Who owns the token ring
    output_to_all(s);
  }
  
  sprintf(s, "\"VERSION\": %s, \n\r", SOFTWARE_VERSION);                                  // Current software version
  output_to_all(s);  

  EEPROM.get(NONVOL_PS_VERSION, j);
  sprintf(s, "\"PS_VERSION\": %d, \n\r", j);                                             // Current persistent storage version
  output_to_all(s); 
  
  dtostrf(revision()/100.0, 4, 2, str_c );              
  sprintf(s, "\"BD_REV\": %s \n\r", str_c);                                               // Current board versoin
  output_to_all(s);
  
  sprintf(s, "}\r\n"); 
  output_to_all(s);
  
/*
 *  All done, return
 */
  return;
}

/*-----------------------------------------------------
 * 
 * function: show_names
 * 
 * brief: Display the list of names
 * 
 * return: None
 * 
 *-----------------------------------------------------
 *
 * If the name is Loop and display the settings
 * 
 *-----------------------------------------------------*/

static void show_names(int v)
{
  unsigned int i;

  if ( v != 0 )
  {
    return;
  }
  
  Serial.print(T("\r\nNames\r\n"));
  
  i=0;
  while (names[i] != 0 )
  {
    Serial.print(i); Serial.print(T(": \""));  Serial.print(names[i]); Serial.print(T("\", \r\n"));
    i++;
  }

/*
 *  All done, return
 */
  return;
}

/*-----------------------------------------------------
 * 
 * function: show_test
 * 
 * brief: Execute one iteration of the self test
 * 
 * return: None67!
 * 
 *----------------------------------------------------*/

static void show_test(int test_number)
 {
  Serial.print(T("\r\nSelf Test:")); Serial.print(test_number); Serial.print(T("\r\n"));
  
  self_test(test_number);
  return;
 }

 /*-----------------------------------------------------
 * 
 * function: set_trace
 * 
 * brief:    Turn the software trace on and off
 * 
 * return: None
 * 
 *-----------------------------------------------------
 *
 * Uset the trace to set the DIP switch
 * 
 *-----------------------------------------------------*/
 static void set_trace
   (
   int trace                // Trace on or off
   )
 {
    char s[32];

    trace |= DLT_CRITICAL;        // Critical is always enabled
    
    if ( trace & DLT_CRITICAL)    {sprintf(s, "\r\rDLT CRITICAL\r\n");   output_to_all(s);}
    if ( trace & DLT_APPLICATION) {sprintf(s, "\r\nDLT APPLICATON\r\n"); output_to_all(s);}
    if ( trace & DLT_DIAG)        {sprintf(s, "\r\nDLT DIAG\r\n");       output_to_all(s);}
    if ( trace & DLT_INFO)        {sprintf(s, "\r\nDLT INFO\r\n");       output_to_all(s);}
    
    sprintf(s, "\r\n0x01 DLT APPLICATON\r\n"); output_to_all(s);
    sprintf(s, "\r\n0x02 DLT DIAG\r\n");       output_to_all(s);
    sprintf(s, "\r\n0x04 DLT INFO\r\n");       output_to_all(s);
    sprintf(s, "\r\r0x89 DLT CRITICAL\r\n");   output_to_all(s);

/*
 * The DIP switch has been remotely set
 */
   is_trace = trace;
   return;   
 }
