==> reweiser3/freETarget/Software/ESP32/freeETarget/main/json.c <==
#include "esp_timer.h"
#include "nvs_flash.h"
#include "nvs.h"
#include "nonvol.h"
#include "freETarget.h"
#include "diag_tools.h"
#include "json.h"
#include "ctype.h"
#include "stdio.h"
#include "serial_io.h"
#include "analog_io.h"
#include "token.h"
#include "stdio.h"
#include "serial_io.h"
#include "mechanical.h"
#include "wifi.h"

void show_echo(void)
{
  unsigned int i, j;
  char   s[512], str_c[32];   // String holding buffers

  if ( (json_token == TOKEN_NONE) || (my_ring == TOKEN_UNDEF) )
  {
    sprintf(s, "\r\n{\r\n\"NAME\":\"%s\", \r\n", names[json_name_id]);
  }
  else
  {
    sprintf(s, "\r\n{\r\n\"NAME\":\"%s\", \r\n", names[json_name_id+my_ring]);
  }
  serial_to_all(s, ALL);

/*
 * Loop through all of the JSON tokens
 */
  i=0;
  while ( JSON[i].token != 0 )                 // Still more to go?  
  {
    if ( (JSON[i].value != NULL) || (JSON[i].d_value != NULL) )              // It has a value ?
    {
      switch ( JSON[i].convert )              // Display based on it's type
      {
        default:
        case IS_VOID:
          break;

        case IS_TEXT:
        case IS_SECRET:
            j = 0;
            while ( *((char*)(JSON[i].value)+j) != 0)
            {
              if ( JSON[i].convert == IS_SECRET )
              {
                str_c[j] = '*';
              }
              else
              {
                str_c[j] = *((char*)(JSON[i].value)+j);
              }
              j++;
            }
            str_c[j] = 0;
            sprintf(s, "%s \"%s\", \r\n", JSON[i].token, str_c);
            break;
            
        case IS_INT32:
        case IS_FIXED:
          sprintf(s, "%s %d, \r\n", JSON[i].token, *JSON[i].value);
          break;

        case IS_FLOAT:
          sprintf(s, "%s %6.2f, \r\n", JSON[i].token, *JSON[i].d_value);
          break;
      }
      serial_to_all(s, ALL);
    }
    i++;
  }
  
/*
 * Finish up with the special cases
 */
  sprintf(s, "\n\r");                                                                    // Blank Line
  serial_to_all(s, ALL);
  
  multifunction_display();
  
  sprintf(s, "\"TRACE\": %d, \n\r", is_trace);                                          // TRUE to if trace is enabled
  serial_to_all(s, ALL);

  sprintf(s, "\"RUNNING_MINUTES\": %10.6f, \n\r", esp_timer_get_time()/100000.0/60.0);                        // On Time
  serial_to_all(s, ALL);
  
  sprintf(s, "\"TEMPERATURE\": %4.2f, \n\r", temperature_C());                          // Temperature in degrees C
  serial_to_all(s, ALL);

  sprintf(s, "\"RELATIVE_HUMIDITY\": %4.2f, \n\r", humidity_RH());
  serial_to_all(s, ALL);

  sprintf(s, "\"SPEED_SOUND\": %4.2f, \n\r", speed_of_sound(temperature_C(), humidity_RH()));
  serial_to_all(s, ALL);

  sprintf(s, "\"V_12_LED\": %4.2f, \n\r", v12_supply());                                            // 12 Volt LED supply
  serial_to_all(s, ALL);
  
  sprintf(s, "\"TIMER_COUNT\": %d, \n\r", (int)(SHOT_TIME * OSCILLATOR_MHZ));             // Maximum number of clock cycles to record shot (target dependent)
  serial_to_all(s, ALL);


  if ( json_token == TOKEN_NONE )
  {
      WiFi_my_ip_address(str_c);
      sprintf(s, "\"WiFi_IP_ADDRESS\": \"%s:1090\", \n\r", str_c);                        // Print out the IP address
      serial_to_all(s, ALL);
  }
  else
  {
    sprintf(s, "\"TOKEN_RING\":  %d, \n\r", my_ring);                                     // My token ring address
    serial_to_all(s, ALL);
    sprintf(s, "\"TOKEN_OWNER\": %d, \n\r", whos_ring);                                  // Who owns the token ring
    serial_to_all(s, ALL);
  }
  
  sprintf(s, "\"VERSION\": %s, \n\r", SOFTWARE_VERSION);                                  // Current software version
  serial_to_all(s, ALL);  

  j = 0;
  // nvs_get_i32(my_handle, NONVOL_PS_VERSION, &j);
  sprintf(s, "\"PS_VERSION\": %d, \n\r", j);                                             // Current persistent storage version
  serial_to_all(s, ALL); 
  
  sprintf(s, "\"BD_REV\": %4.2f \n\r", (float)(revision())/100.0);                                               // Current board versoin
  serial_to_all(s, ALL);
  
  sprintf(s, "}\r\n"); 
  serial_to_all(s, ALL);
  
/*
 *  All done, return
 */
  return;
}

/*-----------------------------------------------------
 * 
 * @function: show_names
 * 
 * @brief: Display the list of names
 * 
 * @return: None
 * 
 *-----------------------------------------------------
 *
 * If the name is Loop and display the settings
 * 
 *-----------------------------------------------------*/

static void show_names(int v)
{
  unsigned int i;

  if ( v != 0 )
  {
    return;
  }
  
  printf("\r\nNames\r\n");
  
  i=0;
  while (names[i] != 0 )
  {
    printf("%d: \"%s\", \r\n", i, names[i]);
    i++;
  }

/*
 *  All done, return
 */
  return;
}

/*-----------------------------------------------------
 * 
 * @function: show_test
 * 
 * @brief: Execute one iteration of the self test
 * 
 * @return: None67!
 * 
 *----------------------------------------------------*/

static void show_test(int test_number)
 {
  printf("\r\nSelf Test: %d\r\n", test_number);
  
  self_test(test_number);
  return;
 }

 /*-----------------------------------------------------
 * 
 * @function: set_trace
 * 
 * @brief:    Turn the software trace on and off
 * 
 * @return: None
 * 
 *-----------------------------------------------------
 *
 * Uset the trace to set the DIP switch
 * 
 *-----------------------------------------------------*/
 static void set_trace
   (
   int trace                // Trace on or off
   )
 {
  char s[32];

  trace |= DLT_CRITICAL;        // Critical is always enabled
    
  if ( trace & DLT_CRITICAL)    {sprintf(s, "\r\r%03d DLT CRITICAL", DLT_CRITICAL);   serial_to_all(s, ALL);}
  if ( trace & DLT_APPLICATION) {sprintf(s, "\r\n%03d DLT APPLICATON", DLT_APPLICATION); serial_to_all(s, ALL);}
  if ( trace & DLT_DIAG)        {sprintf(s, "\r\n%03d DLT DIAG", DLT_DIAG);       serial_to_all(s, ALL);}
  if ( trace & DLT_INFO)        {sprintf(s, "\r\n%03d DLT INFO", DLT_INFO);       serial_to_all(s, ALL);}
  printf("\r\n");

  is_trace = trace;
  return;   
 }
